--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "expo-build-properties": "~0.13.2",
     "expo-font": "~13.0.3",
     "expo-linking": "~7.0.5",
-    "expo-router": "^3.1.0",
+    "expo-location": "^18.0.5",
+    "expo-router": "^3.5.24",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.7",
@@ -33,6 +34,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-maps": "^1.20.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
